--- a/2.1开始上手/焊盘焊接/使用焊盘进行硬件配置.md
+++ b/2.1开始上手/焊盘焊接/使用焊盘进行硬件配置.md
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: 焊盘部分
-parent: Getting Started
+parent: 开始上手
 description: "Configuring your SimpleFOCShield by soldering the pads."
 nav_order: 1
 permalink: /pads_soldering
