--- a/3.2支持的硬件/3.2.4单片机/3.2.4.6树莓派Pico.md
+++ b/3.2支持的硬件/3.2.4单片机/3.2.4.6树莓派Pico.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 树莓派 Pico 板
+title: 树莓派 Pico
 nav_order: 7
 description: "Arduino Simple Field Oriented Control (FOC) library ."
 permalink: /rpi_mcu
@@ -11,7 +11,7 @@ grand_grand_parent: Arduino <span class="simple">Simple<span class="foc">FOC</sp
 
 
 
-# 支持 Rapspberry Pi Pico (rp2040) 板
+# 支持 Rapspberry Pi Pico (rp2040) 
 
 MCU | 2路PWM模式 | 4路PWM模式 | 3路PWM模式 | 6路PWM模式 | pwm频率配置 
 --- | --- |--- |--- |--- |--- 
