--- a/3.2支持的硬件/3.2.4单片机/3.2.4.4_Teensy.md
+++ b/3.2支持的硬件/3.2.4单片机/3.2.4.4_Teensy.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Teensy 板
+title: Teensy
 nav_order: 5
 description: "Arduino Simple Field Oriented Control (FOC) library ."
 permalink: /teensy_mcu
