--- a/3.2支持的硬件/3.2.4单片机/3.2.4.3_STM32.md
+++ b/3.2支持的硬件/3.2.4单片机/3.2.4.3_STM32.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: STM32 板
+title: STM32
 nav_order: 2
 description: "Arduino Simple Field Oriented Control (FOC) library ."
 permalink: /stm32_mcu
