--- a/3.2支持的硬件/3.2.4单片机/3.2.4.5_SAMD21或SAMD51.md
+++ b/3.2支持的硬件/3.2.4单片机/3.2.4.5_SAMD21或SAMD51.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: SAMD21/51 板
+title: SAMD21/51
 nav_order: 6
 description: "Arduino Simple Field Oriented Control (FOC) library ."
 permalink: /samd_mcu
